--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.15.8",
     "@types/node": "^16.11.1",
     "@types/react": "17.0.30",
+    "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
