--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@components/*": ["components/*"],
       "@widgets/*": ["components/widgets/*"],
       "@hooks/*": ["hooks/*"],
+      "@static-data/*": ["static-data/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
