--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-cool-inview": "^2.0.7",
     "react-dom": "17.0.2",
     "react-responsive-carousel": "^3.2.21",
-    "react-scroll": "^1.8.4"
+    "react-scroll": "^1.8.4",
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
