Move layouts to layouts folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "@components/*": ["components/*"],
       "@widgets/*": ["components/widgets/*"],
+      "@layouts/*": ["components/layouts/*"],
       "@hooks/*": ["hooks/*"],
       "@static-data/*": ["static-data/*"],
     }
